fixed spacing

--- a/src/pages/main_page/main_page.module.css
+++ b/src/pages/main_page/main_page.module.css
@@ -11,7 +11,7 @@
   margin-top: 25px;
 }
 .container main {
-  margin: 28px 16px 120px 16px;
+  margin: 28px 16px 100px 16px;
   display: flex;
   flex-direction: column;
   gap: 12px;
